Fixes z-index for nav

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -9,7 +9,7 @@
   padding: 0.75rem 0rem; /* 12px 0px */
   position: fixed;
   width: 90%;
-  z-index: 2;
+  z-index: 3;
   box-sizing: border-box;
   // box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.1);
 }
@@ -122,7 +122,7 @@
   height: 100vh;
   width: 100%;
   z-index: 2;
-  // issue from max-width: 90% in body. need to move that over into a separate container class.
+  // issue due to max-width: 90% in body. need to move that over into a separate container class.
   width: 110%;
   margin-left: -10%;
 }
@@ -147,7 +147,7 @@
     position: fixed;
     width: 90%;
     background-color: $primary-color;
-    z-index: 2;
+    z-index: 3;
     .menu {
       display: none;
     }
